model small screen on mobile view bug is temporary fixed

--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -44,6 +44,11 @@ body {
   color: #222831;
 }
 
+/* model container */
+#model_container {
+  height: 75vh;
+}
+
 /* footer */
 footer {
   display: flex;
